A combination of sweeter and safer code. Thanks fordfrog
git-svn-id: http://svn.l2jserver.com/trunk@2875 d34dfa0f-f91c-0410-86dd-cf06f19dd0ad