@@ -129,7 +129,7 @@ public class ClanTable
 	 */
 	public L2Clan getClan(int clanId)
 	{
-		L2Clan clan = _clans.get(new Integer(clanId));
+		L2Clan clan = _clans.get(Integer.valueOf(clanId));
 		
 		return clan;
 	}
@@ -210,7 +210,7 @@ public class ClanTable
 		if (Config.DEBUG)
 			_log.fine("New clan created: " + clan.getClanId() + " " + clan.getName());
 		
-		_clans.put(new Integer(clan.getClanId()), clan);
+		_clans.put(Integer.valueOf(clan.getClanId()), clan);
 		
 		//should be update packet only
 		player.sendPacket(new PledgeShowInfoUpdate(clan));
