@@ -488,7 +488,7 @@ public final class L2GameClient extends MMOClient<MMOConnection<L2GameClient>>
         for (int i = 0; i < chars.length; i++)
         {
             int objectId = chars[i].getObjectId();
-            _charSlotMapping.add(new Integer(objectId));
+            _charSlotMapping.add(Integer.valueOf(objectId));
         }
     }
 
