@@ -57,15 +57,15 @@ public class ConfirmDlg extends L2GameServerPacket
 
 	public ConfirmDlg addString(String text)
 	{
-		_types.add(new Integer(TYPE_TEXT));
+		_types.add(Integer.valueOf(TYPE_TEXT));
 		_values.add(text);
 		return this;
 	}
 
 	public ConfirmDlg addNumber(int number)
 	{
-		_types.add(new Integer(TYPE_NUMBER));
-		_values.add(new Integer(number));
+		_types.add(Integer.valueOf(TYPE_NUMBER));
+		_values.add(Integer.valueOf(number));
 		return this;
 	}
 
@@ -104,8 +104,8 @@ public class ConfirmDlg extends L2GameServerPacket
 
 	public ConfirmDlg addNpcName(int id)
 	{
-		_types.add(new Integer(TYPE_NPC_NAME));
-		_values.add(new Integer(1000000 + id));
+		_types.add(Integer.valueOf(TYPE_NPC_NAME));
+		_values.add(Integer.valueOf(1000000 + id));
 		return this;
 	}
 
@@ -122,14 +122,14 @@ public class ConfirmDlg extends L2GameServerPacket
 
 	public ConfirmDlg addItemName(int id)
 	{
-		_types.add(new Integer(TYPE_ITEM_NAME));
-		_values.add(new Integer(id));
+		_types.add(Integer.valueOf(TYPE_ITEM_NAME));
+		_values.add(Integer.valueOf(id));
 		return this;
 	}
 
 	public ConfirmDlg addZoneName(int x, int y, int z)
 	{
-		_types.add(new Integer(TYPE_ZONE_NAME));
+		_types.add(Integer.valueOf(TYPE_ZONE_NAME));
 		int[] coord = {x, y, z};
 		_values.add(coord);
 		return this;
@@ -154,8 +154,8 @@ public class ConfirmDlg extends L2GameServerPacket
 
 	public ConfirmDlg addSkillName(int id, int lvl)
 	{
-		_types.add(new Integer(TYPE_SKILL_NAME));
-		_values.add(new Integer(id));
+		_types.add(Integer.valueOf(TYPE_SKILL_NAME));
+		_values.add(Integer.valueOf(id));
 		_skillLvL = lvl;
 		return this;
 	}
@@ -178,7 +178,7 @@ public class ConfirmDlg extends L2GameServerPacket
 		writeC(0xf3);
 		writeD(_messageId);
 
-		if (_types != null && _types.size() > 0)
+		if (_types != null && !_types.isEmpty())
 		{
 			writeD(_types.size());
 			for (int i = 0; i < _types.size(); i++)
