@@ -115,7 +115,7 @@ public class GameServerTable
 				{
 					if(xpp.getLocalName().toString().equals("server"))
 					{
-						Integer id = new Integer(xpp.getAttributeValue(null,"id").toString());
+						Integer id = Integer.valueOf(xpp.getAttributeValue(null,"id").toString());
 						String name = xpp.getAttributeValue(null,"name").toString();
 						_serverNames.put(id,name);
 					}
